--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "ejs": "^2.6.1",
     "element-ui": "^2.4.7",
     "mysql": "^2.16.0",
     "vue": "^2.5.16",
