--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,5 @@
 variables:
   IMAGE_NAME: "${CI_REGISTRY}/${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}"
-  # FIXME: 注意！目前版本中，在引用目录下修改该端口号以免被占用
-  PORT: 13001
 
 stages:
   - build
@@ -12,6 +10,7 @@ build:
   image: node:8
   stage: build
   script:
+    - npm set registry https://registry.npm.taobao.org && npm set disturl https://npm.taobao.org/dist && npm set chromedriver_cdnurl http://cdn.npm.taobao.org/dist/chromedriver && npm set operadriver_cdnurl http://cdn.npm.taobao.org/dist/operadriver && npm set phantomjs_cdnurl http://cdn.npm.taobao.org/dist/phantomjs && npm set fse_binary_host_mirror https://npm.taobao.org/mirrors/fsevents && npm set sass_binary_site http://cdn.npm.taobao.org/dist/node-sass && npm set electron_mirror http://cdn.npm.taobao.org/dist/electron/
     - npm install
     - npm run build:darwin
   tags:
