--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.18.0",
     "ejs": "^2.6.1",
     "element-ui": "^2.4.7",
+    "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
     "mysql": "^2.16.0",
     "vue": "^2.5.16",
