--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ build:
     - npm set registry https://registry.npm.taobao.org && npm set disturl https://npm.taobao.org/dist && npm set chromedriver_cdnurl http://cdn.npm.taobao.org/dist/chromedriver && npm set operadriver_cdnurl http://cdn.npm.taobao.org/dist/operadriver && npm set phantomjs_cdnurl http://cdn.npm.taobao.org/dist/phantomjs && npm set fse_binary_host_mirror https://npm.taobao.org/mirrors/fsevents && npm set sass_binary_site http://cdn.npm.taobao.org/dist/node-sass && npm set electron_mirror http://cdn.npm.taobao.org/dist/electron/
     - npm install
     - npm run build:darwin
+    - npm run build:win32
   tags:
     - dev
     - docker
